--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
         <title>Document</title>
     </head>
     <body>
+        <h1>Why Restauraunts Should Become Allergy Friendly</h1>
     </body>
 </html>
