--- a/index.html
+++ b/index.html
@@ -4,9 +4,58 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Document</title>
+        <title>mbrekke_art300</title>
     </head>
     <body>
-        <h1>Why Restauraunts Should Become Allergy Friendly</h1>
+        <h1>
+            Why Restauraunts Should Become Allergy Friendly
+        </h1>
+        <h2>
+            Introduction
+        </h2>
+        <h3>
+            Attention Getter
+        </h3>
+        <p>
+            How many of you never even glance at the ingredients on a food label before eating something?
+        </p>
+        <h3>
+            Background and Audience Relevance
+        </h3>
+        <p>
+            This is relevant to all of you because anyone can develop an allergy at any point in your life, you’re not always born with them. One in four adults may develop an allergy later in their life. Doctors don’t know why the phenomenon happens.
+        </p>
+        <h3>
+            Speaker Credibility
+        </h3>
+        <p>
+            I am experienced in this topic because I have both a gluten and peanut allergy and I deal with it every day
+        </p>
+        <h3>
+            Thesis
+        </h3>
+        <p>
+            Restaurants should have to provide options for those with food allergies.
+        </p>
+        <h3>
+            Preview of Main Points
+        </h3>
+        <ol>
+            <li>
+                What a food allergy and how many people have them?
+            </li>
+            <li>
+                Why it would be beneficial to the restaurant because more people would be able to eat there, causing them to bring in more money and better reviews?
+            </li>
+            <li>
+                Why restaurants think they shouldn’t have options for those with food allergies?
+            </li>
+        </ol>
+        <h3>
+            Transition to first main point
+        </h3>
+        <p>
+            First, I’m going to educate you on what exactly qualifies as a food allergy.
+        </p>
     </body>
 </html>
