--- a/index.html
+++ b/index.html
@@ -57,5 +57,74 @@
         <p>
             First, I’m going to educate you on what exactly qualifies as a food allergy.
         </p>
+
+        <h2>
+            Body
+        </h2>
+        <h3>
+            Main point 1: What is a food allergy and how many people have them?
+        </h3>
+        <h4>
+            Subpoint 1: What is a food allergy?
+        </h4>
+        <p>
+            According to healthline.com, food allergy is when the body is exposed to a certain food and a harmful response is triggered. The immune system attacks proteins in the food that are usually not a threat to people without the allergy. An allergen is the thing that triggers the harmful immune system response. Severity of a reaction depends on the person and how sensitive they are to the allergen. Some people just have a sensitivity, which means the reaction that you have is caused by the digestive system, while others have an actual allergy which takes place in the immune system. Some people have mild reactions, which can cause an itchy mouth and throat and hives, and some people have severe, which causes throat tightening, difficulty breathing, and can send the person into anaphylactic shock. There are eight major food allergens (Milk, eggs, peanuts, tree nuts, wheat, soy, fish, and shellfish), but there are over 170 foods that have been reported to cause allergic reactions.
+        </p>
+        <h4>
+            Subpoint 2: How many people have them?
+        </h4>
+        <p>
+            According to done by the Food Allergy Research and Education group, it is suspected that 32 million Americans have food allergies, 5.6 million of those being children. 40 percent of children with food allergies are allergic to more than one substance.
+        </p>
+        <h4>
+            Transition to main point 2
+        </h4>
+        <p>
+            Now that you have some background on food allergies, I’ll explain to you why restaurants should be required to have options for people with allergies.
+        </p>
+        <h3>
+            Main point 2: It would be beneficial to the restaurant because more people would be able to eat there, causing them to bring in more money and better reviews.
+        </h3>
+        <h4>
+            Subpoint 1: Bring in more money
+        </h4>
+        <p>
+            If a restaurant is more flexible and open with its options, more patrons would be able to eat there, thus causing them to collect more revenue. Many alternatives for food are even upcharged, again bringing in more money for the restaurant.
+        </p>
+        <h4>
+            Subpoint 2: Better reviews
+        </h4>
+        <p>
+            If someone with a food allergy eats at a place that has options for them, they are highly likely to eat there again and even tell others with allergies that the restaurant caters to those with food allergies, which would make more customers happy and it would reflect well onto the restaurant that. It would broadcast that the restaurant has options for everyone and cares enough about the customers to put in the extra effort to make sure that they can safely eat.
+        </p>
+        <h4>
+            Transition
+        </h4>
+        <p>
+            Now that you know some reasons why restaurants should have options for those with food allergies, I’m going to explain some reasons why restaurants don’t cater to people with allergies.
+        </p>
+        <h3>
+            Main point 3: Why restaurants think they shouldn’t have options for those with food allergies?
+        </h3>
+        <h4>
+            Subpoint 1: According to the CDC, some reasons that restaurants don’t have allergy friendly options are:
+        </h4>
+        <ul>
+            <li>
+                They don’t want to have to provide all of their employees with food allergy training.
+            </li>
+            <li>
+                They don’t want to have to have designated areas for cooking the food for those with allergies so there is no cross contamination
+            </li>
+            <li>
+                Substitutions for foods that contain allergens are usually more expensive.
+            </li>
+        </ul>
+        <h4>
+            Transition
+        </h4>
+        <p>
+            Now that you know why some restaurants don’t provide food allergy friendly options, I’ll review all of the information you’ve just learned.
+        </p>
     </body>
 </html>
