--- a/index.html
+++ b/index.html
@@ -126,5 +126,52 @@
         <p>
             Now that you know why some restaurants don’t provide food allergy friendly options, I’ll review all of the information you’ve just learned.
         </p>
+        <h2>
+            Conclusion
+        </h2>
+        <h3>
+            Restate Thesis
+        </h3>
+        <p>
+            Restaurants should have to provide options for those with food allergies.
+        </p>
+        <h3>
+            Review Main Points
+        </h3>
+        <p>
+            I talked about how a lot of people have food allergies, why it would be beneficial to the restaurant because more people would be able to eat there, causing them to bring in more money and better reviews, and then I explained the reasons why restaurants think they shouldn’t have options for those with food allergies.
+        </p>
+        <h3>
+            Memorable Closer
+        </h3>
+        <p>
+            So, next time you go out to eat, think about how much different your dining experience would be if you had were limited to about a fourth of the menu and could no longer eat any of your favorite foods.
+        </p>
+
+
+
+
+
+        <h2>
+            Full Paper
+        </h2>
+        <h3>
+            Why Restauraunts Should Become Allergy Friendly
+        </h3>
+        <p>
+            How many of you never even glance at the ingredients on a food label before eating something? Well, for some people, having to think about and research everything they eat has become a routine. Today, I’m going to tell you all why restaurants should be required. This is relevant to all of you because anyone can develop an allergy at any point in your life, you’re not always born with them. One in four adults may develop an allergy later in their life and doctors don’t know why the phenomenon happens. I am experienced in this topic because I have both a gluten and peanut allergy and I deal with it every day. My main points are what is a food allergy and how many people have them, why it would be beneficial to the restaurant because more people would be able to eat there, causing them to bring in more money and better reviews, why restaurants think they shouldn’t have options for those with food allergies. First, I’m going to educate you on what exactly qualifies as a food allergy.
+        </p>
+        <p>
+            According to healthline.com, a food allergy is when the body is exposed to a certain allergen and a harmful response is triggered. The immune system attacks proteins in the food that are usually not a threat to people without the allergy. Severity of a reaction depends on the person and how sensitive they are to the allergen. Some people just have a sensitivity, which means the reaction that you have is caused by the digestive system, while others have an actual allergy which takes place in the immune system. Some people have mild reactions, which can cause an itchy mouth and throat and hives, and some people have severe, which causes throat tightening, difficulty breathing, and can send the person into anaphylactic shock. There are eight major food allergens (Milk, eggs, peanuts, tree nuts, wheat, soy, fish, and shellfish), but there are over 170 foods that have been reported to cause allergic reactions. According to done by the Food Allergy Research and Education group, it is suspected that 32 million Americans have food allergies, 5.6 million of those being children. 40 percent of children with food allergies are allergic to more than one substance. Now that you have some background on food allergies, I’ll explain to you why restaurants should be required to have options for people with allergies.
+        </p>
+        <p>
+            If a restaurant is more flexible and open with its options, more patrons would be able to eat there, thus causing them to collect more revenue. Many alternatives for food are even upcharged, again bringing in more money for the restaurant.If someone with a food allergy eats at a place that has options for them, they are highly likely to eat there again and even tell others with allergies that the restaurant caters to those with food allergies, which would make more customers happy and it would reflect well onto the restaurant that. It would broadcast that the restaurant has options for everyone and cares enough about the customers to put in the extra effort to make sure that they can safely eat. Now that you know some reasons why restaurants should have options for those with food allergies, I’m going to explain some reasons why restaurants don’t cater to people with allergies.
+        </p>
+        <p>
+            According to the CDC, some reasons that restaurants don’t have allergy friendly options are : They don’t want to have to provide all of their employees with food allergy training. They don’t want to have to have designated areas for cooking the food for those with allergies so there is no cross contamination. Substitutions for foods that contain allergens are usually more expensive. Now that you know why some restaurants don’t provide food allergy friendly options, I’ll review all of the information you’ve just learned.
+        </p>
+        <p>
+            Restaurants should have to provide options for those with food allergies. I talked about how a lot of people have food allergies, why it would be beneficial to the restaurant because more people would be able to eat there, causing them to bring in more money and better reviews, and then I explained the reasons why restaurants think they shouldn’t have options for those with food allergies. So, next time you go out to eat, think about how much different your dining experience would be if you had were limited to about a fourth of the menu and could no longer eat any of your favorite foods.
+        </p>
     </body>
 </html>
